_sass/_base.scss
// Reset

* {
  box-sizing: border-box;
  &:focus {
    outline: 0.5rem solid lighten($accent-color, 30%);
    transition: 50ms;
  }
}

body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
  margin: 0;
  padding: 0;
}

html, body {
  height: 100%;
  overflow-x: hidden;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

// Base

body {
  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
  color: $text-color;
  background-color: $background-color;
  -webkit-text-size-adjust: 100%;
  font-feature-settings: "kern" 1,"liga" 1,"calt" 1,"pnum" 1,"tnum" 0,"onum" 1,"lnum" 0,"dlig" 0;
  font-kerning: normal;
  text-rendering: optimizeLegibility;
}


// Vertical Rhythm

h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
%vertical-rhythm {
  margin-bottom: $spacing-unit / 2;
}

// Images

img {
  max-width: 100%;
  vertical-align: middle;
}

// Figure

figure > img {
  display: block;
}

figcaption {
  font-size: 0.875em;
  text-align: center;
}

// Clearfix

%clearfix {

  &:after {
    content: "";
    display: table;
    clear: both;
  }
}

// Icons

.icon {

  > svg {
    display: inline-block;
    width: 16px;
    height: 16px;
    vertical-align: middle;
    path {
      fill: $grey-color;
    }
  }
}

